# modsync

./: .gitignore  Cargo.toml  README.md  config.dev.txt  config.example.txt  refactor.md
.github/: copilot-instructions.md
src/: actions.rs  app.rs  arma.rs  config.rs  downloader.rs  gitutils.rs  http.rs  index.rs  lfs.rs  lib.rs  logging.rs  main.rs  modpack.rs  settings.rs  ui.rs
src/config/: mod.rs
src/sync/: cleaner.rs  http.rs  local.rs  manager.rs  messages.rs  mod.rs  remote.rs  state.rs  status.rs  torrent.rs  types.rs  utils.rs
src/ui/: actions.rs  app.rs  config_panel.rs  event.rs  file_graph.rs  header.rs  mod.rs  modals.rs  settings_panel.rs  state.rs  torrent_display.rs  torrent_file_tree.rs  torrent_progress.rs  utils.rs  view.rs
tests/: azure_integration.rs  common.rs  config_loading_test.rs  download_test.rs  downloader.rs  e2e.rs  e2e_downloader.rs  integration_download.rs  lfs_async.rs  validate.rs
