# Cargo configuration for the modsync application
#
# This project provides a TUI for synchronising an Arma 3 modpack from a remote
# Git repository.  The project depends on a handful of crates to provide
# functionality such as git operations (`git2`), SHA‑256 hashing (`sha2`),
# walking the file system (`walkdir`), JSON parsing (`serde` +
# `serde_json`), a text user interface (`ratatui` with the `crossterm`
# backend) and error handling (`anyhow`).

[package]
name = "modsync"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
description = "Synchronise an Arma 3 modpack from a Git repository and launch the game."

[dependencies]
anyhow = "1.0.99"
directories = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
sha2 = "0.10"
sha1 = "0.10"
walkdir = "2.5"
hex = "0.4"
log = "0.4"
once_cell = "1.21"
simplelog = "0.12"
bytes = "1.4"
url = "2.4"
urlencoding = "2.1"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
crossterm = "0.29"
ratatui = { version = "0.29", features = ["crossterm"] }
async-trait = "0.1"

[build-dependencies]
# build-time dependencies removed; config is now always created at runtime next to the executable

[dev-dependencies]
tempfile = "3.22.0"
tiny_http = "0.12.0"
