[package]
name = "modsync"
version = "0.1.0"
edition = "2024"

[dependencies]
librqbit = "8.1.1"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
directories = "6.0.0"
reqwest = { version = "0.12.23", features = ["json"] }
chrono = "0.4.42"
walkdir = "2.5.0"
opener = "0.8.3"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
walkdir = "2.5.0"
hex = "0.4.3"
